--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
-<html>
-  <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Hello World</title>
+</head>
+<body>
     <h1>Hello, World!</h1>
-  </body>
+    <p>This is my first HTML page.</p>
+</body>
 </html>
+
