--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
+    <title>GTKEOE</title>
 </head>
-<body>
-    <h1>Hello, World!</h1>
+<body>Getting to Know Each Other Enhanced</h1>
     <p></p>
 </body>
 </html>
